--- a/artistEco/JFViewJamsVC.xib
+++ b/artistEco/JFViewJamsVC.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6205" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6198"/>
     </dependencies>
     <objects>
@@ -10,24 +11,17 @@
                 <outlet property="lblGenres" destination="8A0-xD-X1a" id="axD-Ez-Ioq"/>
                 <outlet property="lblLocation" destination="E8a-Qw-MJe" id="ty5-jQ-r5u"/>
                 <outlet property="lblTime" destination="0g8-LO-wj1" id="Lt3-KZ-O4b"/>
-                <outlet property="mapView" destination="5s8-Ep-sIH" id="82a-QV-nei"/>
                 <outlet property="tableView" destination="Nb1-AX-bfq" id="1SR-6S-0TR"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="470"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="5s8-Ep-sIH">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="84"/>
-                    <connections>
-                        <outlet property="delegate" destination="-1" id="rMs-61-lbH"/>
-                    </connections>
-                </mapView>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bVc-HX-Mw2">
-                    <rect key="frame" x="0.0" y="83" width="320" height="93"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="93"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E8a-Qw-MJe">
                             <rect key="frame" x="49" y="4" width="98" height="21"/>
@@ -69,7 +63,7 @@
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" pagingEnabled="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Nb1-AX-bfq">
-                    <rect key="frame" x="0.0" y="180" width="320" height="329"/>
+                    <rect key="frame" x="0.0" y="97" width="320" height="329"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="ObK-fE-TPE"/>
@@ -77,7 +71,7 @@
                     </connections>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VqD-pa-lXL">
-                    <rect key="frame" x="137" y="523" width="46" height="30"/>
+                    <rect key="frame" x="137" y="440" width="46" height="30"/>
                     <state key="normal" title="Join!">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -88,11 +82,8 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4">
-                <size key="portraitSize" width="320" height="568"/>
-                <size key="landscapeSize" width="568" height="320"/>
-            </simulatedScreenMetrics>
-            <point key="canvasLocation" x="318" y="370"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="318" y="321"/>
         </view>
     </objects>
 </document>
