--- a/JFViewJamsVC.xib
+++ b/JFViewJamsVC.xib
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6205" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6198"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="JFViewJamsVC">
             <connections>
                 <outlet property="lblDate" destination="I6j-W1-kUd" id="tQ0-d1-qRJ"/>
-                <outlet property="lblGenres" destination="8A0-xD-X1a" id="axD-Ez-Ioq"/>
                 <outlet property="lblLocation" destination="E8a-Qw-MJe" id="ty5-jQ-r5u"/>
                 <outlet property="lblTime" destination="0g8-LO-wj1" id="Lt3-KZ-O4b"/>
                 <outlet property="tableView" destination="Nb1-AX-bfq" id="1SR-6S-0TR"/>
@@ -23,46 +22,31 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="127"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E8a-Qw-MJe">
-                            <rect key="frame" x="42" y="4" width="98" height="21"/>
+                            <rect key="frame" x="42" y="11" width="98" height="21"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                             <color key="textColor" red="0.32156862745098036" green="0.32549019607843138" blue="0.3411764705882353" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I6j-W1-kUd">
-                            <rect key="frame" x="42" y="26" width="68" height="21"/>
+                            <rect key="frame" x="42" y="40" width="258" height="21"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                             <color key="textColor" red="0.32156862745098036" green="0.32549019607843138" blue="0.3411764705882353" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0g8-LO-wj1">
-                            <rect key="frame" x="150" y="26" width="158" height="21"/>
-                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                            <color key="textColor" red="0.32156862745098036" green="0.32549019607843138" blue="0.3411764705882353" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Genres" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8A0-xD-X1a">
-                            <rect key="frame" x="20" y="70" width="98" height="21"/>
+                            <rect key="frame" x="40" y="67" width="260" height="21"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                             <color key="textColor" red="0.32156862745098036" green="0.32549019607843138" blue="0.3411764705882353" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icons-13.png" translatesAutoresizingMaskIntoConstraints="NO" id="gad-FD-Haa">
-                            <rect key="frame" x="20" y="6" width="16" height="20"/>
+                            <rect key="frame" x="20" y="13" width="16" height="20"/>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icons-14.png" translatesAutoresizingMaskIntoConstraints="NO" id="S6e-yR-r2Y">
-                            <rect key="frame" x="21" y="30" width="14" height="14"/>
+                            <rect key="frame" x="21" y="44" width="14" height="14"/>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icons-16.png" translatesAutoresizingMaskIntoConstraints="NO" id="Kft-7p-JmS">
-                            <rect key="frame" x="130" y="30" width="13" height="14"/>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Members" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dYv-tN-oa1">
-                            <rect key="frame" x="42" y="47" width="98" height="21"/>
-                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                            <color key="textColor" red="0.32156862745098036" green="0.32549019607843138" blue="0.3411764705882353" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icons-15.png" translatesAutoresizingMaskIntoConstraints="NO" id="CwM-q0-lzp">
-                            <rect key="frame" x="19" y="49" width="19" height="18"/>
+                            <rect key="frame" x="20" y="71" width="13" height="14"/>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VqD-pa-lXL">
                             <rect key="frame" x="246" y="99" width="46" height="22"/>
@@ -96,16 +80,13 @@
                 </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="341" y="321"/>
         </view>
     </objects>
     <resources>
         <image name="icons-11.png" width="28" height="23"/>
         <image name="icons-13.png" width="15" height="19"/>
         <image name="icons-14.png" width="14" height="14"/>
-        <image name="icons-15.png" width="19" height="18"/>
         <image name="icons-16.png" width="13" height="14"/>
     </resources>
 </document>
